<resources>
    <string name="title_activity_dash">Facebook Home</string>
    <string name="settings_dash">Facebook Home Settings</string>
    <string name="dash_help_center">Help Center</string>
    <string name="crash_dash">Crash</string>
    <string name="enable_dash">Enable Facebook Home</string>
    <string name="facebook_notification_affordance_text">Slide to view notification</string>
    <string name="message_notification_affordance_text">Slide to view message</string>
    <string name="message_attachment_text">%s sent an attachment.</string>
    <string name="clear_all_button_text">Clear</string>
    <string name="notification_tap_to_view">Tap again to open.</string>
    <string name="notification_unknown_application_name">Unknown Application</string>
    <string name="elapsed_time_today">TODAY</string>
    <string name="elapsed_time_yesterday">YESTERDAY</string>
    <string name="dash_logging_out_progress">Logging out…</string>
    <string name="dash_caption_profile_pic">Profile picture</string>
    <string name="bauble_messages_button_label">Messenger</string>
    <string name="bauble_camera_button_label">Camera</string>
    <string name="bauble_apps_button_label">Apps</string>
    <string name="bauble_back_button_label">Unlock</string>
    <string name="dash_login_button_label">Log Into Facebook</string>
    <string name="dash_login_logo_description">Facebook Home logo</string>
    <string name="ufi_first_of_friends">Be the first of your friends</string>
    <string name="ufi_you_like_this">You like this</string>
    <string name="dash_feed_fetch_connection_fail">There was a problem fetching new stories. Please check your connection and try again.</string>
    <string name="dash_feed_fetch_network_fail">There was a problem loading new stories.</string>
    <string name="dash_feed_instagram_story_title">%1$s added a new photo.</string>
    <string name="dash_logout">Log Out</string>
    <string name="dash_nux_balloon_text">Drag your profile picture to get to messages, apps or the last app you used.</string>
    <string name="dash_nux_tap_clue_view_text">Tap anywhere to bring back your profile picture.</string>
    <string name="dash_login_disclosure_text1">Use Facebook Home to quickly launch apps and see their notifications</string>
    <string name="dash_login_disclosure_text1_no_system_notifications">Use Facebook Home to quickly launch apps</string>
    <string name="dash_login_disclosure_text2">Glance at your phone for the latest posts from friends</string>
    <string name="dash_login_disclosure_text3">"Keep chatting, no matter what you're doing"</string>
    <string name="terms_of_service">Terms</string>
    <string name="data_use_policy">Data Use Policy</string>
    <string name="cookies">Cookies</string>
    <string name="learn_more">Learn More</string>
    <string name="dash_preferences_title">Facebook Home Settings</string>
    <string name="dash_preferences_disable_facebook_home">Turn Off Facebook Home</string>
    <string name="dash_preferences_disable_facebook_home_dialog_message">Are you sure you want to turn off Facebook Home?</string>
    <string name="dash_preferences_disable_facebook_home_dialog_confirm_button">Turn Off</string>
    <string name="dash_preferences_facebook_disabled_dialog_title">Facebook Home is Off</string>
    <string name="dash_preferences_facebook_disabled_dialog_message">Tap the Facebook Home app icon to turn it back on.</string>
    <string name="dialog_close">Close</string>
    <string name="dash_preferences_status_bar">Show Status Bar</string>
    <string name="dash_preferences_home_on_wake">See Home When Screen Turns On</string>
    <string name="dash_preferences_data_use">Data Use</string>
    <string name="dash_preferences_data_use_dialog_high">High</string>
    <string name="dash_preferences_data_use_dialog_medium">Medium</string>
    <string name="dash_preferences_data_use_dialog_low">Low</string>
    <string name="dash_preferences_data_use_dialog_title">Data Use</string>
    <string name="dash_preferences_messages_category">MESSAGES</string>
    <string name="dash_preferences_messages_settings">Messenger Settings</string>
    <string name="dash_preferences_account_category">ACCOUNT</string>
    <string name="dash_preferences_facebook_settings">Facebook Settings</string>
    <string name="dash_preferences_terms">Terms &amp; Policies</string>
    <string name="dash_preferences_help_center">Help Center</string>
    <string name="dash_preferences_logout">Log Out</string>
    <string name="dash_empty_stories_text">&lt;b>Tap here&lt;/b> to find friends on Facebook and see their updates in Cover Feed.</string>
    <string name="dash_ood_descrip_first">"You've reached the daily data limit for &lt;b>%s&lt;/b> data use on Facebook Home."</string>
    <string name="dash_ood_descrip_second">If you want to load more stories, change your &lt;b>Data Usage&lt;/b> to &lt;b>High&lt;/b>.</string>
    <string name="dash_ood_view_settings">View Settings</string>
    <string name="dash_gating_device_unsupported_main">"Thanks for installing Facebook Home. Your device is not supported yet. You'll get a notification when Facebook Home is ready for your device."</string>
    <string name="dash_gating_waitlist_main">"Thanks for installing Facebook Home. You've been added to the waitlist. We're rolling it out slowly to make sure you get the best experience."</string>
    <string name="dash_gating_waitlist_footer">Check back soon or look for a notification on Facebook.</string>
    <string name="dash_gating_button">Go to Facebook</string>
    <string name="home_app_reenable_toast">Please tap \"Enable\" to re-enable Facebook Home. You may need to uninstall updates first.</string>
    <string name="homeintent_nux_clue_text_ics_and_before">Check Use by default, then tap Facebook Home.</string>
    <string name="homeintent_nux_clue_text_jb_and_above">Select Facebook Home, then tap Always.</string>
    <string name="homeintent_nux_dialog_header">Facebook Home Tip</string>
    <string name="homeintent_nux_dialog_body">Next time you press the home button, select Facebook Home, then tap Always. You can undo this later from Home Settings.</string>
    <string name="homeintent_nux_dialog_button">OK</string>
    <string name="launchables_class_name_fb_home_settings">fb_home_settings</string>
    <string name="launchables_class_name_fb4a">fb4a</string>
    <string name="settings_launchables">Settings</string>
    <string name="all_apps">All Apps</string>
    <string name="out_of_space">Out of space</string>
    <string name="uninstall_application">Uninstall</string>
    <string name="remove_shortcut">Remove</string>
    <string name="composer_button_status">Status</string>
    <string name="composer_button_photo">Photo</string>
    <string name="composer_button_checkin">Check In</string>
    <string name="home_settings_title">Home Settings</string>
    <string name="more_icon_title">More…</string>
    <string name="upsell_google_play_message">Tap \"Install\" below to start downloading.</string>
    <string name="ansible_recapture_megaphone_content">Thanks for installing Facebook Home. Just one more step to get started.</string>
    <string name="ansible_recapture_megaphone_button_not_now">Not Now</string>
    <string name="ansible_recapture_megaphone_button_finish_setup">Finish Setup</string>
    <string name="ufiservices_load_previous_comments">Load previous comments</string>
    <string name="ufiservices_first_to_like">Be the first to like this.</string>
    <string name="ufiservices_separator">•</string>
    <string name="ufiservices_like">Like</string>
    <string name="ufiservices_unlike">Unlike</string>
    <string name="ufiservices_comment">Comment</string>
    <string name="ufiservices_share">Share</string>
    <string name="ufiservices_try_again">Try Again</string>
    <string name="ufiservices_delete">Delete</string>
    <string name="ufiservices_cancel">Cancel</string>
    <string name="zero_generic_extra_data_charges_dialog_title">Standard Data Charges</string>
    <string name="zero_generic_do_not_remind_me_again">"Don't remind me again"</string>
    <string name="zero_view_timeline_dialog_content">"You're about to leave Messenger. Standard data charges may apply."</string>
    <string name="zero_image_search_dialog_content">"You're about to leave Messenger. Standard data charges may apply."</string>
    <string name="zero_external_url_dialog_content">"You're about to leave Messenger. Standard data charges may apply."</string>
    <string name="zero_show_map_button_title">Show Map</string>
    <string name="zero_show_map_dialog_content">Standard charges apply when you load map data.</string>
    <string name="zero_voip_call_dialog_content">Calls are free over Wi-Fi. Standard charges apply for calls over a mobile network.</string>
    <string name="zero_bottom_banner_content">[[content]] [[cta]]</string>
    <string name="internal_pref_category_zero_rating">Zero Rating</string>
    <string name="preference_zero_rating_available_title">Zero Rating Feature Availability:</string>
    <string name="preference_zero_rating_available_yes">Available</string>
    <string name="preference_zero_rating_available_no">Not Available</string>
    <string name="preference_zero_rating_current_status_title">Current Zero Rating Status:</string>
    <string name="preference_zero_rating_current_status_yes">Enabled</string>
    <string name="preference_zero_rating_current_status_no">Disabled</string>
    <string name="preference_zero_rating_current_status_unknown">Unknown</string>
    <string name="preference_zero_rating_clear_preferences">Clear Zero Rating Preferences</string>
    <string name="common_name_prefixes">1LT, 1ST, 2LT, 2ND, 3RD, ADMIRAL, CAPT, CAPTAIN, COL, CPT, DR, GEN, GENERAL, LCDR, LT, LTC, LTG, LTJG, MAJ, MAJOR, MG, MR, MRS, MS, PASTOR, PROF, REP, REVEREND, REV, SEN, ST</string>
    <string name="common_name_suffixes">B.A., BA, D.D.S., DDS, I, II, III, IV, IX, JR., M.A., M.D., MA, MD, MS, PH.D., PHD, SR., V, VI, VII, VIII, X</string>
    <string name="common_last_name_prefixes">"D', DE, DEL, DI, LA, LE, MC, SAN, ST, TER, VAN, VON"</string>
    <string name="common_name_conjunctions">&amp;, AND, OR</string>
    <string name="timeline_message">Message</string>
    <string name="timeline_activitylog">Activity Log</string>
    <string name="timeline_fetch_failed">Timeline could not be loaded</string>
    <string name="order_overview_order_shipping_total">Shipping</string>
    <string name="order_overview_order_grand_total">Total</string>
    <string name="order_overview_order_tax_info">Sales tax is included where applicable</string>
    <string name="order_overview_has_gifts">ITEMS</string>
    <string name="order_overview_personalization_header">CARD</string>
    <string name="order_overview_button_share_gift">Give Gift</string>
    <string name="order_overview_order_sub_total_singular">SubTotal (1 item)</string>
    <string name="order_overview_payment_details_header">PAYMENT INFO &amp; SHIPPING DETAILS</string>
    <string name="order_overview_terms_apply">Terms Apply</string>
    <string name="orca_finding_contacts_failed">Finding Contacts Failed</string>
    <string name="orca_finding_contacts_failed_dismiss">Dismiss</string>
    <string name="orca_finding_contacts_failed_try_again">Try Again</string>
    <string name="mute_warning_global">All notifications are off.</string>
    <string name="mute_warning_button">Turn On</string>
    <string name="all">All</string>
    <string name="no_images_selected">No Photos Selected</string>
    <string name="no_images_selected_instructions">Tap the checkmark on each photo to share</string>
    <string name="photos_no_photos">No Photos Found</string>
    <string name="selected">Selected</string>
    <string name="accessibility_jewel_friends">Friends</string>
    <string name="accessibility_jewel_inbox">Inbox</string>
    <string name="accessibility_jewel_notifications">Notifications</string>
</resources>