<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_order_total" android:background="@color/generic_white" android:padding="@dimen/standard_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ks="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_sub_total" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textColor="@*android:color/black" android:gravity="left" android:layout_gravity="left" android:id="@id/text_order_sub_total_text" android:paddingLeft="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_overview_order_sub_total_singular" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textColor="@*android:color/black" android:gravity="right" android:layout_gravity="right" android:id="@id/text_order_sub_total_value" android:paddingRight="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_shipping_total" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/standard_half_padding">
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textColor="@*android:color/black" android:gravity="left" android:layout_gravity="left" android:id="@id/text_order_shipping_total_text" android:paddingLeft="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_overview_order_shipping_total" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textColor="@*android:color/black" android:gravity="right" android:layout_gravity="right" android:id="@id/text_order_shipping_total_value" android:paddingRight="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <com.facebook.gifts.widget.TiledView android:layout_width="fill_parent" android:layout_height="@dimen/horizontal_dotted_line_divider_height" ks:bitmapSrc="@drawable/dotted_divider_horizontal" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_grand_total" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_half_padding">
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textStyle="bold" android:textColor="@color/generic_black" android:gravity="left" android:layout_gravity="left" android:id="@id/text_order_grand_total_text" android:paddingLeft="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_overview_order_grand_total" />
        <View android:layout_width="0.0dip" android:layout_height="1.0px" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/standard_13pt_text_size" android:textStyle="bold" android:textColor="@color/generic_black" android:gravity="right" android:layout_gravity="right" android:id="@id/text_order_grand_total_value" android:paddingRight="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout android:paddingTop="@dimen/standard_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/standard_button_text_size" android:textStyle="bold" android:textColor="@color/generic_white" android:gravity="center" android:id="@id/button_share_gift" android:background="@drawable/button_green" android:layout_width="fill_parent" android:layout_height="@dimen/standard_button_height" android:text="@string/order_overview_button_share_gift" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/standard_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/standard_11pt_text_size" android:textColor="@color/standard_gray_808080" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_overview_order_tax_info" />
        <TextView android:textSize="@dimen/standard_11pt_text_size" android:textColor="@color/standard_blue_3B5998" android:id="@id/text_terms_apply" android:paddingLeft="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_overview_terms_apply" />
    </LinearLayout>
</LinearLayout>