<?xml version="1.0" encoding="utf-8"?>
<com.facebook.orca.common.ui.overlay.SwipableOverlayLayout android:id="@id/thread_list_overlay_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:orca="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/thread_list_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.facebook.orca.common.ui.titlebar.TitleBarViewStub android:id="@id/titlebar_stub" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:hasBackButton="false" />
        <com.facebook.orca.common.ui.widgets.SlidingOutSuggestionView android:id="@id/thread_list_mute_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:dividerPosition="bottom" orca:animateOutDirection="up" orca:suggestionText="@string/mute_warning_global" orca:buttonText="@string/mute_warning_button" />
        <com.facebook.orca.threadlist.SyncDisabledWarningView android:id="@id/thread_list_sync_disabled_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.facebook.orca.threadlist.VersionUpgradePromoView android:id="@id/thread_list_version_upgrade_promo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.facebook.widget.ConfirmationView android:id="@id/thread_list_contacts_upload_failed" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:message="@string/orca_finding_contacts_failed" orca:positiveButtonTitle="@string/orca_finding_contacts_failed_try_again" orca:negativeButtonTitle="@string/orca_finding_contacts_failed_dismiss" />
        <LinearLayout android:id="@id/orca_threadlist_fragment_container" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <fragment android:name="com.facebook.orca.threadlist.ThreadListFragment" android:id="@id/orca_threadlist_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:layout_anchorPosition="alignWithBottomOfAnchor" orca:layout_isOverlay="true" orca:layout_anchoredTo="@id/thread_list_overlay_container">
        <ImageButton android:layout_gravity="right" android:id="@id/compose_button" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/orca_compose_button" />
        <ViewStub android:id="@id/zero_rating_bottom_banner_stub" android:layout="@layout/carrier_bottom_banner_wrapper" android:inflatedId="@id/zero_rating_bottom_banner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <com.facebook.orca.nux.NuxScrimView android:id="@id/nux_scrim" android:layout_width="fill_parent" android:layout_height="fill_parent" orca:layout_anchorPosition="centerVerticallyOnAnchor|centerHorizontallyOnAnchor" orca:layout_isOverlay="true" orca:layout_anchoredTo="@id/thread_list_overlay_container" />
    <com.facebook.orca.nux.NuxSmsIntroView android:id="@id/nux_sms_intro" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" orca:layout_anchorPosition="centerVerticallyOnAnchor|centerHorizontallyOnAnchor" orca:layout_isOverlay="true" orca:layout_anchoredTo="@id/thread_list_overlay_container" style="@style/NuxIntroLayout" />
    <com.facebook.orca.nux.NuxFindingContactsIntroView android:id="@id/nux_finding_contacts_intro" orca:layout_anchorPosition="centerVerticallyOnAnchor|centerHorizontallyOnAnchor" orca:layout_isOverlay="true" orca:layout_anchoredTo="@id/thread_list_overlay_container" style="@style/NuxFindingContactsIntro" />
    <com.facebook.orca.nux.NuxFindingContactsView android:id="@id/nux_finding_contacts" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:layout_anchorPosition="alignWithTopOfAnchor|centerHorizontallyOnAnchor" orca:layout_isOverlay="true" orca:layout_anchoredTo="@id/thread_list_overlay_container" style="@style/NuxFindingContacts" />
</com.facebook.orca.common.ui.overlay.SwipableOverlayLayout>