<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/layout_media_picker" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <fragment android:name="com.facebook.katana.activity.media.crop.CropManager" android:id="@id/crop_manager" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/layout_non_crop" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <GridView android:id="@id/picker_grid" android:background="@drawable/solid_black" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:horizontalSpacing="@dimen/multipicker_spacing" android:verticalSpacing="@dimen/multipicker_spacing" android:stretchMode="columnWidth" android:columnWidth="@dimen/multipicker_grid_size" android:numColumns="auto_fit" android:rowHeight="72.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <com.facebook.katana.view.vault.PickerGalleryView android:id="@id/picker_gallery" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <RelativeLayout android:gravity="center" android:id="@id/no_images_selected_text" android:background="@color/black" android:padding="9.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:id="@id/no_images_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:src="@drawable/picker_checkmark_hint" android:layout_above="@id/no_images_top" android:layout_centerHorizontal="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/light_gray_text_color" android:gravity="center" android:id="@id/no_images_middle" android:background="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_images_selected" android:layout_below="@id/no_images_top" android:layout_centerHorizontal="true" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:background="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0sp" android:text="@string/no_images_selected_instructions" android:layout_below="@id/no_images_middle" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/no_images_found_text" android:background="@color/black" android:padding="9.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:src="@drawable/picker_no_images_hint" />
                <TextView android:textSize="16.0sp" android:textColor="@color/light_gray_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photos_no_photos" />
            </LinearLayout>
            <ImageView android:id="@id/black_box" android:background="@color/black" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.facebook.widget.ExpandablePhoto android:id="@id/animation_expandable_photo" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <ImageView android:id="@id/checkbox_animation" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.facebook.photos.photogallery.GalleryLauncher android:id="@id/gallery_launcher" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/bottom_buttons" android:background="@drawable/picker_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/title_bar_height">
            <ImageButton android:id="@id/button_rotate" android:background="@drawable/clear" android:visibility="gone" android:layout_width="60.0dip" android:layout_height="fill_parent" android:src="@drawable/rotate_button_states" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <ImageButton android:id="@id/camera_or_grid_button" android:background="@drawable/clear" android:layout_width="60.0dip" android:layout_height="fill_parent" android:src="@drawable/camera_button_states" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <RelativeLayout android:id="@id/all_selected_group" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerInParent="true">
                <Button android:enabled="false" android:textAppearance="?android:textAppearanceLarge" android:textColor="@drawable/all_selected_button_colors" android:id="@id/all_button" android:background="@drawable/clear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/all" android:layout_alignParentBottom="true" />
                <Button android:textAppearance="?android:textAppearanceLarge" android:textColor="@drawable/all_selected_button_colors" android:id="@id/selected_button" android:background="@drawable/clear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/selected" android:layout_toRightOf="@id/all_button" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <ImageButton android:id="@id/button_post" android:background="@drawable/clear" android:layout_width="60.0dip" android:layout_height="fill_parent" android:src="@drawable/compose_button_states" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <com.facebook.widget.CountBadge android:id="@id/count_badge_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>