<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ks="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ScrollView android:id="@id/layout_scroll" android:background="@color/generic_background" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/order_review_to_from_tag" />
                    <TextView android:textSize="@dimen/standard_12pt_text_size" android:textStyle="bold" android:textColor="@color/standard_section_header_text" android:gravity="left" android:layout_gravity="left" android:id="@id/text_gifts_header" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_padding" android:layout_marginRight="@dimen/standard_padding" android:text="@string/order_overview_has_gifts" />
                    <LinearLayout android:orientation="vertical" android:id="@id/layout_products_in_order" android:background="@drawable/cell" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_padding" android:layout_marginRight="@dimen/standard_padding" android:layout_marginBottom="@dimen/standard_padding" />
                    <TextView android:textSize="@dimen/standard_12pt_text_size" android:textStyle="bold" android:textColor="@color/standard_section_header_text" android:gravity="left" android:layout_gravity="left" android:id="@id/text_personalization_header" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_padding" android:layout_marginRight="@dimen/standard_padding" android:text="@string/order_overview_personalization_header" />
                    <include layout="@layout/order_review_custom_card" />
                    <TextView android:textSize="@dimen/standard_12pt_text_size" android:textStyle="bold" android:textColor="@color/standard_section_header_text" android:gravity="left" android:layout_gravity="left" android:id="@id/text_payment_details_header" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_padding" android:layout_marginTop="@dimen/standard_padding" android:layout_marginRight="@dimen/standard_padding" android:text="@string/order_overview_payment_details_header" />
                    <TextView android:textSize="@dimen/standard_14pt_text_size" android:textStyle="bold" android:textColor="@color/generic_black" android:gravity="left" android:layout_gravity="left" android:id="@id/text_payment_details" android:background="@drawable/cell" android:padding="@dimen/standard_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_padding" android:layout_marginRight="@dimen/standard_padding" android:layout_marginBottom="@dimen/standard_padding" />
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
        <ImageView android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/shadow_up" android:scaleType="fitXY" />
    </FrameLayout>
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/order_review_order_total" />
</LinearLayout>